[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acc_sdk"
description = "An Fork of the Unofficial Python Implementation of the Autodesk Construction Cloud API SDK"
license = { text = "MIT" }
authors = [{name="Daniel Byrne", email= "realdanielbyrne@icloud.com"}]
maintainers = [{name="Ben O'Brien", email= "bobrien@peritas.au"}]
readme = "README.md"
requires-python = ">= 3.12"
version = "0.5.14"
dependencies = [
    "requests>=2.32.4",
    "urllib3>=2.5.0",
    "python-dotenv>=1.0.1",
    "flask>=3.1.0",
]

[project.urls]
repository = "https://github.com/Halogen01/acc_sdk"

[tool.poetry]
packages = [
    {include = "acc_sdk"},
]
include = [
    {path = "docs", format = "sdist"},
    {path = "MANIFEST.in", format = "sdist"},
    {path = "README.md", format = "sdist"},
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"
urllib3 = "^2.5.0"
flask = "^3.1.0"
argparse = "^1.4.0"
ipython = "^9.0.1"
python-dotenv = "^1.0.1"
black = "^25.1.0"
ruff = "^0.11.2"
[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.poetry.scripts]
dashboard = "tests.test_3legged:run"
